---
source: tests/server_spec.rs
expression: response
---
<!doctypehtml><html lang=en><title>Page Not Found</title><style>body{background-color:beige;font-family:Arial,sans-serif;color:#666;text-align:center}h1{font-size:100px;margin:50px 0 20px;color:#997643}h2{font-size:50px;margin:0;color:#826644}p{font-size:20px;margin:0 0 50px;color:#826644}div{font-size:20px;margin:0 0 50px;color:#826644}a{text-decoration:none}a:hover{text-decoration:underline}table{border-collapse:collapse;width:40%;margin:20px auto;font-size:20px;color:#826644}td,th{padding:5px;border:1px solid #997643}th{background-color:beige}</style><h1>404</h1><h2>Page Not Found</h2><p>The page you are looking for could not be found.<div id=routes></div><script>let routes = document.getElementById('routes');
let table = document.createElement('table');
let json = JSON.parse('{"available_routes":["home","signon"],"home":"It contains Homepage","signon":"Allows user to login or signup"}');
for (let i = 0; i < json.available_routes.length; i++) {
  let tr = document.createElement('tr');
  let td1 = document.createElement('td');
  let td2 = document.createElement('td');

  let a = document.createElement('a');
  a.href = json.available_routes[i];
  a.innerText = '/' + json.available_routes[i];

  td1.appendChild(a);
  td2.innerHTML = json[json.available_routes[i]];
  tr.appendChild(td1);
  tr.appendChild(td2);
  table.appendChild(tr);
}
routes.appendChild(table);</script>
